--- a/szamlazz-frontend/angular.json
+++ b/szamlazz-frontend/angular.json
@@ -31,8 +31,13 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles"
+              ]
+            },
             "scripts": []
           },
           "configurations": {
