add some frontend tests

--- a/szamlazz-frontend/angular.json
+++ b/szamlazz-frontend/angular.json
@@ -94,8 +94,13 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles"
+              ]
+            },
             "scripts": []
           }
         }
